# polychat-ai

./: .env.example  .gitignore  AGENTS.md  Dockerfile.mcp  README.md  allow-1.txt  allow-test-1.txt  alt-1.txt  always-1.txt  always-2.txt  always-3.txt  always-4.txt  chatgpt.rs  connector-e2e-success.txt  connector-test-setup.txt  consistency-test-2.txt  consistency-test-3.txt  ctrl-1.txt  delay-1.txt  delay-2.txt  final-e2e.txt  fresh-start.txt  full-1.txt  package-lock.json  package.json  persist-1.txt  persist-2.txt  playwright.config.ts  pref-1.txt  run3-1.txt  run3-2.txt  run3-3.txt  slow-1.txt  trace-dump.txt  tsconfig.json  tsup.config.ts  turn-1.txt  turn-2.txt  turnex-1.txt  turnex-2.txt  (+3 more)
.pi/: superpowers-state.json
docs/: api.md  chatgpt-api.md  claude-api.md  deepseek-api.md  gemini-api.md  kimi-api.md  npm-release.md  polychat-ai-extension.md  (+1 more)
rust/server/: Cargo.toml
rust/server/src/: auth.rs  config.rs  main.rs  model_aliases.rs  router.rs  session.rs
rust/server/src/mcp/: config.rs  http_client.rs  mod.rs  registry.rs  types.rs
rust/server/src/pow/: keccak.rs  mod.rs  solver.rs
rust/server/src/providers/: chatgpt.rs  claude.rs  deepseek.rs  gemini.rs  kimi.rs  mod.rs  sse.rs
rust/server/src/routes/: completion_messages.rs  completions.rs  conversation_tracker.rs  conversations.rs  emulated_completion.rs  errors.rs  generate.rs  health.rs  mcp.rs  mod.rs  model_registry.rs  models.rs  openai_format.rs  resolver.rs  sessions.rs  shutdown.rs
rust/server/src/tools/: emulated.rs  inject.rs  mod.rs  parser.rs
rust/server/tests/: cross_lang.rs
(+115 files in other folders)
