[package]
name = "polychat-server"
version = "0.1.3"
edition = "2021"
description = "Polychat API server — OpenAI-compatible API for browser-backed subscriptions"

[[bin]]
name = "polychat-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "cookies", "json"] }
aes-gcm = "0.10"
aes = "0.8"
scrypt = "0.11"
sha3 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
tokio-stream = "0.1"
urlencoding = "2"
sha2 = "0.10"
